# gdelt-pulse

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.pipeline  README.md  cluster_report.html  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  sync-requirements.yml
api/: index.py
docs/: api-reference.md  architecture.md  database_design.md  deployment.md  getting-started.md  pipeline.md  search.md
docs/design/plans/: 2026-04-20-api-pipeline-split.md  2026-04-21-phase2-infra.md  2026-04-22-api-developer-experience.md
docs/design/specs/: 2026-04-21-phase2-design.md  (+2 more)
scripts/: browse_articles.py  cluster_viewer.py  compare_embeddings.py
sql/: 001_schema.sql  002_api_keys.sql  002_gravity_views.sql
src/gdelt_event_pipeline/: __init__.py  runner.py
tests/: conftest.py
tests/api/: test_app.py  test_articles_api.py  test_auth.py  test_clusters_api.py  test_keys.py  test_search.py
tests/clustering/: __init__.py  test_assign.py  test_centroid.py  test_pipeline.py  test_scoring.py
tests/config/: test_settings.py
tests/embeddings/: test_embed.py  test_pipeline.py  test_text.py
tests/ingestion/: test_gkg_fetcher.py  test_pipeline.py  test_scraper.py
tests/normalization/: test_gkg_fields.py  test_normalize.py  test_source.py  test_url.py
tests/pipeline/: test_runner.py
tests/query/: test_filters.py  test_keyword.py  test_ranking.py  test_search.py  test_vector.py
tests/storage/: test_articles.py  test_clusters.py  test_database.py  test_pipeline_state.py
(+73 files in other folders)
