[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "gdelt-pulse"
version = "0.1.0"
description = "GDELT event ingestion and clustering pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.15.6",
    "pre-commit>=4.0.0",
    "build>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gdelt_event_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
